Fixed teaser grayed out when note quick edit open

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -544,7 +544,7 @@ li.datepicker-date {
   }
 }
 
-.backdrop-disable .editable-field-container{
+.backdrop-disable .editable-field-container.active{
   * {
     pointer-events: auto !important;
   }
