--- a/backend/src/main/resources/templates/acceptInviteRequest.html
+++ b/backend/src/main/resources/templates/acceptInviteRequest.html
@@ -10,22 +10,22 @@
     </div>
     <div id="em-content">
       <div id="em-heading" style="padding-top: 30px;max-width: 320px;margin-left: auto;margin-right: auto;">
-        <h1 style="font-size: 26px;font-weight: 200;color: black;">welcome to your<br/>extended mind</h1>
+        <h1 style="font-size: 26px;font-weight: 200;color: black;text-align: center;">welcome to your<br/>extended mind</h1>
       </div>
       <div id="em-description" style="padding-top: 15px;max-width: 355px;margin-left: auto;margin-right: auto;line-height: 28px;">
-        <h2 style="font-size: 16px;font-weight: 200;color: #231F20;">
-        	<p>this is the roll out of a very limited beta batch.</p>
-            <p>the initial roll out is for iphone and android users.</p>
-            <p>don't hesitate to contact us at <a href="mailto:info@ext.md">info@ext.md</a> for any questions or comments.</p>
-            <p><br/><br/>welcome to your extended mind.</p>
+        <h2 style="font-size: 16px;font-weight: 200;color: #231F20;text-align: center;">
+        	<p style="text-align: center;">this is the roll out of a very limited beta batch.</p>
+            <p style="text-align: center;">the initial roll out is for iphone and android users.</p>
+            <p style="text-align: center;">don't hesitate to contact us at <a href="mailto:info@ext.md">info@ext.md</a> for any questions or comments.</p>
+            <p style="text-align: center;"><br/><br/>welcome to your extended mind.</p>
             </h2>
       </div>
       <div id="em-button" style="padding-top: 70px;">
-        <a href="acceptInviteLink" style="text-decoration: none;color: white;"><span id="em-button-area" style="padding-top: 20px;padding-bottom: 20px;padding-left: 10%;padding-right: 10%;max-width: 320px;margin-left: auto;margin-right: auto;background-color: #0282FE;border-radius: 7px;font-size:15px;">click here to start using the service</span></a>
+        <a href="acceptInviteLink" style="text-decoration: none;color: white;"><span id="em-button-area" style="padding-top: 20px;padding-bottom: 20px;padding-left: 10%;padding-right: 10%;max-width: 320px;margin-left: auto;margin-right: auto;background-color: #0282FE;border-radius: 7px;font-size:15px;text-align: center;">click here to start using the service</span></a>
       </div>
     </div>
     <div id="em-footer" style="padding-top: 40px;">
-      <h3 style="font-size: 14px;font-weight: 200;color: #231F20;"><a id="em-extmd" href="http://ext.md" target="_blank" style="text-decoration: none;font-weight: bold;color: #231F20;">ext.md</a> |
+      <h3 style="font-size: 14px;font-weight: 200;color: #231F20;text-align: center;"><a id="em-extmd" href="http://ext.md" target="_blank" style="text-decoration: none;font-weight: bold;color: #231F20;">ext.md</a> |
           <a href="https://www.facebook.com/extmd" target="_blank" style="text-decoration: none;color: #231F20;">facebook</a> |
           <a href="https://twitter.com/extmd" target="_blank" style="text-decoration: none;color: #231F20;">twitter</a> |
           <a href="http://www.extendedmind.org" target="_blank" style="text-decoration: none;color: #231F20;">blog</a> |
