--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -32,11 +32,11 @@ html {
   height: 100%;
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
-  body, div.main-container, div[role=main], .no-slides-container, .slides-container, section.one-column-grid, section.two-column-grid, .column {
+  body, div#root-container, div#root, .no-slides-container, .slides-container, section.one-column-grid, section.two-column-grid, .column {
     height: inherit;
     overflow: hidden;
   }
-  div[role=main] {
+  div#root {
     // Default to white background
     background-color: white;
   }
