--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -191,20 +191,21 @@ section#tasks-dates {
   .date-heading {
     position: relative;
   }
-  #pull-to-previous-week, #pull-to-next-week {
+  #pull-to-previous, #pull-to-next {
     text-align: center;
-    line-height: 200px;
-    height: 200px;
+    line-height: 100px;
+    height: 100px;
     width: 100%;
-  }
-  #pull-to-previous-week {
     position: absolute;
-    top: -200px;
   }
-  .week-loader {
+  #pull-to-previous {
+    position: absolute;
+    top: -100px;
+  }
+  .loader {
     color: @default-element;
   }
-  .week-loader-active {
+  .loader-active {
     color: @highlighted-element;
   }
 }
