Fixed edit page breaking for 'edit context' heading

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -148,9 +148,13 @@ header {
           display: table-cell;
           vertical-align: middle;
         }
-        button {
-          padding-right: @horizontal-grid;
+        button#edit-cancel-button {
+          padding-right: 6px;
           padding-left: @horizontal-grid;
+        }
+        button#edit-save-button {
+          padding-right: @horizontal-grid;
+          padding-left: 6px;
         }
       }
     }
