Renamed 'dates' slide to 'timeline'

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -185,9 +185,9 @@ section#signup {
   }
 }
 
-// TASKS DATES
+// TASKS TIMELINE
 
-section#tasks-dates {
+section#tasks-timeline {
   .date-heading {
     position: relative;
   }
