Moved titles in full edit to text areas for easier editing

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -85,6 +85,9 @@ section#launch {
     .content-container {
       height: 100%;
       overflow-y: auto;
+      textarea {
+        padding-bottom: 10px;
+      }
     }
   }
 }
