--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -93,6 +93,10 @@ input, select, textarea {
   background-color: inherit;
 }
 
+textarea {
+  min-height: @vertical-grid / 2;
+}
+
 button {
   padding: 0;
   margin: 0;
