--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -41,6 +41,7 @@ div#accordionTitleHeightFix {
 a#accordionTitleLink {
   color: @content;
   line-height: 19px;
+  .break-words;
 }
 
 // SIMPLE CONTENT
@@ -64,6 +65,7 @@ a#accordionTitleLink {
 .teaser {
   line-height: @vertical-grid-half;
   font-size: @small-font-size;
+  .break-words;
 }
 
 .teaser, .teaser-empty {
