Added custom solution for ios-cordova where padding for fade out was 1px too big

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -42,7 +42,10 @@ a#accordionTitleLink {
   color: @content;
   line-height: 19px;
   .break-words;
-  &.needsPadding {
+  &.needsSmallPadding {
+    padding-top: 4px;
+  }
+  &.needsBigPadding {
     padding-top: 5px;
   }
 }
