Added possibility to hide plus button

--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -27,6 +27,11 @@ Fundamentals that affect the whole app.
   font-weight: 700;
 }
 
+.small-font {
+  font-size: @small-font-size;
+}
+
+
 html {
   // There is never any full page scrolling
   height: 100%;
