Dashboard:  * initialize only first slide and register swiperCreated callback in SwiperService to initialize rest of the slides  * merged dashboard slides into dashboardSlide template and dashboardSlideDirective and removed single dashboard templates  * public getFirstDateOfTheWeek and getFirstDateOfTheMonth methods in DateService
* Fixed NoteService getArchivedNotes method to return archivedNotes array instead of activeNotes array
* MockTaskBackendService mockCompleteTask method sets current time to task's complete key
* Refactoring

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -71,6 +71,10 @@ div#closedAccordionTitleWrapper {
   line-height: @vertical-grid-half;
 }
 
+.dashboard-info {
+  color: @default-element;
+}
+
 // TEASER
 
 .teaser {
