Fixed footer hiding causing layout to break. Fixed javascript error when removing list or context

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -251,6 +251,10 @@ footer {
   margin-bottom: -@footer-height;
 }
 
+.hide-footer .swiper-container.main-slides {
+  margin-bottom: 0;
+}
+
 // NO SWIPER
 
 .no-slides-container .header-page {
