--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -597,7 +597,7 @@ li.datepicker-date {
   #omnibar-label-wrapper, .ellipsis:after {
     background-image: none !important;
   }
-  #active-action-wrapper, #plus-button-wrapper, #feature-container{
+  #active-action-wrapper, #plus-button-wrapper, #feature-container, .border-button{
     background-color: inherit;
   }
 }
