First version of archive  * grouped consecutive menu entries with ng-if or ng-show/hide inside single conditional div  * decreased left and right footer link right and left padding respectively to make room for longer title names

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -194,7 +194,7 @@ header {
   }
 }
 
-.hide-footer .page-content-container{
+.hide-footer .page-content-container {
   padding-bottom: @page-header-height + @vertical-grid-half;
 }
 
@@ -233,6 +233,16 @@ footer {
           padding-right: @horizontal-grid;
           padding-left: @horizontal-grid;
           display: inline-block !important;
+        }
+      }
+      li#left-slide-link {
+        a {
+          padding-right: @horizontal-grid - 10px; // make room for long names
+        }
+      }
+      li#right-slide-link {
+        a {
+          padding-left: @horizontal-grid - 10px; // make room for long names
         }
       }
     }
