Fix inbox scrolling.

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -182,6 +182,7 @@ section#signup {
 #inbox-container {
   section#inbox {
     #inbox-page-content-container {
+      overflow-y: auto;
       padding-bottom: @footer-height;
     }
   }
