Implemented history synchronization from the backend. Archive and dashboard now initially working.

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -172,7 +172,7 @@ header {
   padding-top: 12px;
   padding-bottom: @footer-height + @page-header-height;
 
-  .inner-page-content-container {
+  .inner-page-content-container, .inner-page-content {
     height: inherit;
     position: relative;
     overflow-y: auto;
