--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -69,7 +69,8 @@
 @default-button-disabled: lighten(@default-button, 20%);
 
 @highlighted-button: #0f82fe;
-@highlighted-button-pressed: lighten(@highlighted-button, 20%);
+@highlighted-button-pressed: darken(@highlighted-button, 20%);
+@highlighted-button-disabled: lighten(#b0b0b6, 20%);
 
 @cancel-button: #7e7e7e;
 @cancel-button-pressed: darken(@cancel-button, 20%);
