Added subheadings to completed for better readability

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -541,6 +541,10 @@ a.content:active {
   line-height: 19px;
 }
 
+.subheading {
+  padding-top: @vertical-grid-half;
+}
+
 // MODALS
 
 #onboarding-modal.small-modal {
