fixed backdrop breaking input and select styles  * changed editable field focus and blur event callbacks jQuery $element.addClass and $element.removeClass methods to use $animate service methods removed quick edit task indentation CSS set date input color with class refactoring

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -387,9 +387,11 @@ input[type="checkbox"]:checked + label:before {
 }
 
 input[type=date] {
+  &.simple-input {
+    color: @default-element;
+  }
   background: none;
   border: none;
-  color: @default-element;
   outline: none;
   padding-bottom: 0;
   padding-left: 0;
