Exposed account and dashboard to everyone

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -303,7 +303,7 @@ footer {
   a.feature-link {
     font-size: 1.17em;  // http://www.w3.org/TR/CSS2/sample.html
   }
-  li#last-feature { // padding-bottom for li with last a.feature-link
+  li.last-feature { // padding-bottom for li with last a.feature-link
     padding-bottom: @vertical-grid;
   }
   li#collectives {
