--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -48,7 +48,7 @@
 @separator: #dadada;
 @instruction: #70c041;
 @warning: #e22c09;
-@mobile-menu: #363636;
+@menu: #363636;
 
 @default-element: #919191;
 @default-element-hover: darken(@default-element, 10%);
