Experimental Android fix (hack) for checkbox icon repaint problems when swiping up/down

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -373,6 +373,16 @@ input[type='checkbox'] + label:before {
   color: @default-button;
 }
 
+// Android hack: 10px padding caused redraw problems
+// on the checkbox while swiping, and no other CSS
+// solution fixed the problem. Something like this:
+// http://stackoverflow.com/a/16174338/2659424
+// might be the only proper solution to the repaint
+// problems with Android's WebKit.
+.android input[type='checkbox'] + label:before {
+  padding-right: 15px;
+}
+
 input[type="checkbox"] + label:before {
   .icon-selection-empty;
 }
