--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -215,3 +215,10 @@ section#tasks-timeline {
     color: @highlighted-element;
   }
 }
+
+// ABOUT PAGE
+
+#about-help {
+  line-height: @vertical-grid-half;
+}
+
