Fixed hidden footer, also on inbox

--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -166,7 +166,7 @@ header {
 }
 
 .hide-footer .page-content-container {
-  padding-bottom: @page-header-height + @vertical-grid-half;
+  padding-bottom: @vertical-grid-half;
 }
 
 .simple-content-container {
