Refactored overview and details slide to not contain lists. Added keyword editing and deletion possibility.

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -458,7 +458,7 @@ select {
 
 // LISTS
 
-.list-arrow-right {
+.click-to-slide {
   span.icon-arrow-right {
     // Add small margin to prevent arrow from touching scrollbar
     // on desktop
