--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -165,7 +165,7 @@ section#signup {
 }
 
 // STATIC PAGES WITH MENU
-#account-container, #about-container, #inbox-container, #admin-container {
+#account-container, #about-container, #inbox-container, #admin-container, #settings-container, #lists-container {
   height: 100%;
   section#account, section#about, section#inbox, section#admin {
     height: inherit;
