--- a/frontend/core/src/main/webapp/static/less/main.less
+++ b/frontend/core/src/main/webapp/static/less/main.less
@@ -31,6 +31,10 @@ Fundamentals that affect the whole app.
   font-size: @small-font-size;
 }
 
+.smallest-font {
+  font-size: @smallest-font-size;
+}
+
 
 html {
   // There is never any full page scrolling
