--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -293,8 +293,7 @@ footer {
       padding-right: 30px;
       padding-left: 30px;
     }
-    a.active, a.system-link:active, a.feature-link:active,
-    a.lists-link:active, a.lists-link:active + a.hide-expand-link, a.list-link:active {
+    a.active, a.lists-link.active + a.hide-expand-link {
       background-color: white;
       color: black;
     }
