Increased heading font size

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -167,6 +167,7 @@ header.static-page-header {
   .heading {
     color: @highlighted-element;
     font-weight: 700;
+    font-size: @large-font-size;
   }
   .omni-button {
     .button;
